# googom

./: .clang-format  .gitignore  CMakeLists.txt  DATA_GOVERNANCE.md  DEBUGGING.md  DESIGN.md  LICENSE.md  README.md  REQUIREMENTS.md  REQUIRMENTS.md  TODO.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.docker/: docker-compose.yml
.github/workflows/: docker-build.yml
communication/communication_utils/: communication_utils.h
communication/http/: message_store.h  rest_server.cpp  rest_server.h
communication/tcp/: tcp_server.cpp  tcp_server.h  tcp_session.h
communication/temp_store/: message_store.cpp  message_store.h
configs/: config.json
http/: http_session.cpp  http_session.h  rest_server.cpp  rest_server.h  simple_http_server.cpp  simple_http_server.h
http/s_http/: message_store.h  rest_server.cpp  rest_server.h
json_samples/: sample1.json
managers/: config_manager.cpp  config_manager.h  distributed_topic_manager.cpp  distributed_topic_manager.h  initialization_manager.cpp  initialization_manager.h  topic_manager.cpp  topic_manager.h
public_topic/: topic_definition.cpp  topic_definition.h  topic_structure.h
topic_debugging/: topic_debugging.cpp  topic_debugging.h
topic_io/: topic_io.cpp  topic_io.h
topic_private/topic_offset/: topic_private_offset_definition.cpp  topic_private_offset_definition.h  topic_private_offset_structure.h
topic_private/topic_user/: topic_private_user_definition.cpp  topic_private_user_definition.h  topic_private_user_structure.h
topic_public/: topic_definition.cpp  topic_definition.h  topic_public_definition.cpp  topic_public_definition.h  topic_public_message.h  topic_public_structure.h  topic_public_structure_enchanced.h  topic_structure.h
topics/topic_debugging/: topic_debugging.cpp  topic_debugging.h
topics/topic_io/: topic_io.cpp  topic_io.h
topics/topic_private/topic_offset/: topic_private_offset_definition.cpp  topic_private_offset_definition.h  topic_private_offset_structure.h
topics/topic_private/topic_user/: topic_private_user_definition.cpp  topic_private_user_definition.h  topic_private_user_structure.h
topics/topic_public/: topic_public_definition.cpp  topic_public_definition.h  topic_public_message.h  topic_public_structure.h
utilities/: print_utilities.cpp  print_utilities.h  utils.cpp  utils.h
